--- a/components/buttons.html
+++ b/components/buttons.html
@@ -52,20 +52,20 @@
       <section>
         <h2>Icon Button Variants</h2>
         <div class="row">
-          <button class="icon sm">
-            <span class="visuallyhidden">Label</span>
+          <button class="icon sm" aria-pressed="false" aria-describedby="icon-button-sm-example" aria-label="x icon">
+            <span id="icon-button-sm-example" class="visuallyhidden">Label</span>
             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
           </button>
-          <button class="icon md">
-            <span class="visuallyhidden">Label</span>
+          <button class="icon md" aria-pressed="false" aria-describedby="icon-button-md-example" aria-label="x icon">
+            <span id="icon-button-md-example" class="visuallyhidden">Label</span>
             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
           </button>
-          <button class="icon lg">
-            <span class="visuallyhidden">Label</span>
+          <button class="icon lg" aria-pressed="false" aria-describedby="icon-button-lg-example" aria-label="x icon">
+            <span id="icon-button-lg-example" class="visuallyhidden">Label</span>
             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
           </button>
-          <button class="icon xl">
-            <span class="visuallyhidden">Label</span>
+          <button class="icon xl" aria-pressed="false" aria-describedby="icon-button-xl-example" aria-label="x icon">
+            <span id="icon-button-xl-example" class="visuallyhidden">Label</span>
             <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
           </button>
         </div>
