--- a/style/_scss/_base.scss
+++ b/style/_scss/_base.scss
@@ -9,8 +9,7 @@ html {
   min-width: 100%;
   margin: 0 auto;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
-  // font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   color: $color--text-dark;
   scroll-behavior: smooth;
