--- a/style/master.css
+++ b/style/master.css
@@ -40,7 +40,7 @@ html {
   min-width: 100%;
   margin: 0 auto;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   color: var(--color--text-dark);
   scroll-behavior: smooth;
